assets/css/style.scss
---
---

@import "{{ site.theme }}";

p {
    overflow-wrap:break-word;
    word-wrap:break-word;
}

header, footer, #header_wrap, #footer_wrap {
    background: #44004e
}

#forkme_banner {
    background-color: #000000
}

h1, h2 {
    color: #5200c6
}

a {
    color: #00a0cc
}

strong {
    color:#44004e
}

/* Dropdown Button */
.dropbtn {
  background-color: transparent;
  color: #00a0cc;
  padding: 16px;
  font-size: 16px;
  border: none;
}
/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}
/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  border-top: 1px solid #00a0cc;
  display: none;
  position: absolute;
  background-color: #800080;
  width: 100%;
  z-index: 1;
}
/* Links inside the dropdown */
.dropdown-content a {
  color: #00a0cc;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}
.dropdown-content a:hover {background-color: #5200c6;color:white;}
.dropdown:hover .dropdown-content {display: block;}
.dropdown:hover .dropbtn {background-color: #800080;}

